--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+    <meta data-react-helmet="true" property="og:type" content="website">
+    <meta data-react-helmet="true" property="og:description" content="Экотский путь от поиска недвижимости емонта и организации переезда в ноются крви сервисныеа.">
+    <meta property="og:image" content="https://cdn.m2.ru/assets/file-upload-server/8fbc39a3ce1bac66612e986ee32ccb3a.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
